--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -202,10 +202,10 @@ input, select, textarea {
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #4682B4, #87CEFA);
+				background-image: -webkit-linear-gradient(to right, #4682B4, #87CEFA);
+				background-image: -ms-linear-gradient(to right, #4682B4, #87CEFA);
+				background-image: linear-gradient(to right, #4682B4, #87CEFA);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3243,7 +3243,7 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color: #FFB6C1;
 		}
 
 		.wrapper.style1 {
@@ -3772,10 +3772,10 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #4682B4, #87CEFA);
+				background-image: -webkit-linear-gradient(to right, #4682B4, #87CEFA);
+				background-image: -ms-linear-gradient(to right, #4682B4, #87CEFA);
+				background-image: linear-gradient(to right, #4682B4, #87CEFA);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
